# PrakForITEA

./: BazaRahunkiv03010101.rar  README.md
010423_AnalogClock/: CMakeLists.txt  Clock.cpp  Clock.h  main.cpp
01042903_dopisati_vinyatki/: CMakeLists.txt  MyExeptions.h  main.cpp
010430_KhrestikiNoliki/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
01044102_Adapter_z_rozumnimi_vkazivnikami/: CMakeLists.txt  main.cpp
01044106_povedinkovi_patterni/: CMakeLists.txt  main.cpp
AgregaciaOfWorkers_006432/: CMakeLists.txt  Department.cpp  Department.h  Worker.cpp  Worker.h  main.cpp
Bankomat/: CMakeLists.txt  main.cpp
Bekon_01011283/: CMakeLists.txt  main.cpp
BezVinyatkiv_01042902/: CMakeLists.txt  MyArray.cpp  MyArray.h  main.cpp
Calc/: main.cpp
Calculator_010407/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ChitannyaZTextovogoPolya/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ClassDate_00820/: CMakeLists.txt  Date.cpp  Date.h  main.cpp
CycleZNalopichenyam/: CMakeLists.txt  main.cpp
DosconaliChisla/: CMakeLists.txt  main.cpp
Ekstremums/: CMakeLists.txt  main.cpp
Fibonacci/: CMakeLists.txt  main.cpp
FriendlyClasses_006601/: CMakeLists.txt  FirstPlayer.cpp  FirstPlayer.h  SecondPlayer.cpp  SecondPlayer.h  main.cpp
FunctionOfProfit_01011206/: CMakeLists.txt  main.cpp
Keywords_2009/: CMakeLists.txt  main.cpp
LogicOperators/: main.cpp  (+1 more)
Polimorphism_01031500/: CMakeLists.txt  OakTree.cpp  OakTree.h  PaleTree.cpp  PaleTree.h  PalmTree.cpp  PalmTree.h  TreeSapling.cpp  TreeSapling.h  main.cpp
(+110 files in other folders)
