cmake_minimum_required(VERSION 3.26)
project(Polimorphism_01031500)

set(CMAKE_CXX_STANDARD 23)

add_executable(Polimorphism_01031500 main.cpp
        TreeSapling.h
        TreeSapling.cpp
        PalmTree.h
        PalmTree.cpp
        PaleTree.h
        PaleTree.cpp
        OakTree.h
        OakTree.cpp)
